Added Less mixin for column width by index; Renamed attr to tc-col-index

--- a/src/less/tcGrid.less
+++ b/src/less/tcGrid.less
@@ -2,6 +2,10 @@
     [tc-col-field="@{name}"]{ width:@width; }
 }
 
+.tcGridColumnIndexWidth(@index, @width){
+    [tc-col-index="@{index}"]{ width:@width; }
+}
+
 .tcGrid_bootstrap(
         @border:0,
         @pagerColor: #FFF,
