--- a/src/less/tcGrid.less
+++ b/src/less/tcGrid.less
@@ -16,7 +16,7 @@
         @rowBorder: 1px solid #ddd,
         @headerRowBorder: 2px solid #ddd
 ){
-    .tcGrid(
+    .tcStyle(
         @border: @border,
         @pagerColor: @pagerColor,
         @headerColor: @headerColor,
@@ -26,9 +26,47 @@
         @rowBorder: @rowBorder,
         @headerRowBorder: @headerRowBorder
     );
+
+    .tcDisplay();
 }
 
-.tcGrid(
+.tcDisplay() {        
+    .tc-display_table{
+        display: table;        
+        
+        .tc-display_thead {            
+            display: table-header-group;
+         
+            .tc-display_tr {
+                display: table-row;                
+
+                .tc-display_th {               
+                    display: table-cell;                    
+                }
+
+                .tc-display_sort {                    
+                    &.desc:after { content: "\f0d7";}
+                    &.asc:after { content: "\f0d8";}
+                }
+            }
+        }
+
+        .tc-display_tbody {        
+            display: table-row-group;    
+
+            .tc-display_tr{
+                display: table-row;
+
+                .tc-display_td { 
+                    display: table-cell;                                 
+                }                
+            }            
+        }
+    }
+}
+
+
+.tcStyle(
     @border:1px solid #ddd, 
     @pagerColor:#ddd, 
     @cellPadding:5px, 
@@ -36,61 +74,53 @@
     @rowColor:#f5f5f5, 
     @rowColorAlternating:#FDFDFD, 
     @rowColorHover:#f0f0f0, 
-    @rowBorder:none, 
+    @rowBorder: none, 
     @headerRowBorder:1px solid #ddd,
     @fontSize:inherit
 ){
     font-size: @fontSize;
     
-    .tc-grid_table{
-        display: table;
+    .tc-style_table{        
         margin-bottom: 0;
         width: 100%; 
         border-bottom: @border;
         
-        .tc-grid_thead {            
-            display: table-header-group;
-         
-            .tc-grid_tr {
-                display: table-row;
-                background-color: @headerColor;
+        .tc-display_thead {                                 
+            .tc-style_tr {                
+                background-color: @headerColor;        
+            }
 
-                .tc-grid_th {               
-                    display: table-cell;
-                    font-weight: bold;
-                    vertical-align: bottom;   
+            .tc-style_th {                                   
+                font-weight: bold;
+                vertical-align: bottom;   
 
-                    border-top: @border;
-                    border-left: @border;
-                    border-bottom: @headerRowBorder;
-                    padding: @cellPadding;
-         
-                    &::selection { background: transparent; }
-                    &::-moz-selection { background: transparent; }
+                border-top: @border;
+                border-left: @border;
+                border-bottom: @headerRowBorder;
+                padding: @cellPadding;
+     
+                &::selection { background: transparent; }
+                &::-moz-selection { background: transparent; }
 
-                    &:last-child {
-                        border-right: @border;
-                    }
+                &:last-child {
+                    border-right: @border;
                 }
+            }
 
-                .tc-grid_sort {
-                    &:after{
-                        margin-left: 5px;
-                        font-family: FontAwesome;
-                    }
-                        
-                    &.desc:after { content: "\f0d7";}
-                    &.asc:after { content: "\f0d8";}
+            .tc-style_sort {
+                &:after{
+                    margin-left: 5px;
+                    font-family: FontAwesome;
                 }
+                    
+                &.desc:after { content: "\f0d7";}
+                &.asc:after { content: "\f0d8";}
             }
         }
 
-        .tc-grid_tbody {        
-            display: table-row-group;    
-
-            .tc-grid_tr{
-                display: table-row;
-                
+        .tc-display_tbody {
+                    
+            .tc-style_tr{                                
                 &:nth-child(odd) {
                     background-color: @rowColor;
                 }
@@ -101,29 +131,29 @@
 
                 &[ng-click]:hover {
                     background-color: @rowColorHover;
-                }
-
-                .tc-grid_td { 
-                    display: table-cell; 
-                    border-left: @border;                                
+                }                
+            }   
+            .tc-display_tr {                           
+                .tc-style_td {                     
+                    border-left: @border;
                     border-top: @rowBorder;
                     padding: @cellPadding;
 
                     &:last-child {
                         border-right: @border;
                     }
-                }
-
+                }      
+                            
                 &:first-child{
-                    .tc-grid_td {
+                    .tc-style_td {
                         border-top:none;
                     }
                 }
-            }            
-        }
+            }   
+        }     
     }
 
-    .tc-grid_pager {
+    .tc-style_pager {
         width: 100%;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
@@ -131,22 +161,23 @@
         background-color: @pagerColor;        
         padding: @cellPadding;
 
-        .tc-grid_item-total {     
+        .tc-style_item-total {     
             float:left;           
         }
 
-        .tc-grid_page-nav {    
+        .tc-style_page-nav {    
             float: right;
             text-align: right;        
 
-            .tc-grid_page-display {
+            .tc-style_page-display {
                 padding-right: @cellPadding;
             }
         }
     }
 }
 
+
 .tcGrid__scope {
-    .tc-grid { .tcGrid(); }
-    .tc-grid_bootstrap { .tcGrid_bootstrap(); }
+    .tc-grid { .tcStyle(); .tcDisplay(); }
+    .tc-grid_bootstrap { .tcGrid_bootstrap(); .tcDisplay(); }
 }    
