remove bootstrap dependency
update demo
remove bootstrap dependency

--- a/src/templates/tcGrid.html
+++ b/src/templates/tcGrid.html
@@ -24,10 +24,10 @@
             </div>
             <div class="tc-style_page-nav">
                 <span class="tc-page-display">{{%OPTIONS%.paging.currentPage}} / {{%OPTIONS%.internal.pageCount}}</span>
-                <button class="btn btn-default btn-xs" ng-click="%OPTIONS%.internal.first()" ng-disabled="%OPTIONS%.paging.currentPage === 1"><i class="fa fa-fast-backward"></i></button>
-                <button class="btn btn-default btn-xs" ng-click="%OPTIONS%.internal.prev()" ng-disabled="%OPTIONS%.paging.currentPage === 1"><i class="fa fa-play fa-rotate-180"></i></button>
-                <button class="btn btn-default btn-xs" ng-click="%OPTIONS%.internal.next()" ng-disabled="%OPTIONS%.paging.currentPage === %OPTIONS%.internal.pageCount"><i class="fa fa-play "></i></button>
-                <button class="btn btn-default btn-xs" ng-click="%OPTIONS%.internal.last()" ng-disabled="%OPTIONS%.paging.currentPage === %OPTIONS%.internal.pageCount"><i class="fa fa-fast-forward"></i></button>
+                <button class="tc-button" ng-click="%OPTIONS%.internal.first()" ng-disabled="%OPTIONS%.paging.currentPage === 1"><i class="fa fa-fast-backward"></i></button>
+                <button class="tc-button" ng-click="%OPTIONS%.internal.prev()" ng-disabled="%OPTIONS%.paging.currentPage === 1"><i class="fa fa-play fa-rotate-180"></i></button>
+                <button class="tc-button" ng-click="%OPTIONS%.internal.next()" ng-disabled="%OPTIONS%.paging.currentPage === %OPTIONS%.internal.pageCount"><i class="fa fa-play "></i></button>
+                <button class="tc-button" ng-click="%OPTIONS%.internal.last()" ng-disabled="%OPTIONS%.paging.currentPage === %OPTIONS%.internal.pageCount"><i class="fa fa-fast-forward"></i></button>
             </div>
             <div class="clearfix"></div>
         </div>
