--- a/src/less/tcGrid.less
+++ b/src/less/tcGrid.less
@@ -118,8 +118,7 @@
             }
         }
 
-        .tc-display_tbody {
-                    
+        .tc-display_tbody {                    
             .tc-style_tr{                                
                 &:nth-child(odd) {
                     background-color: @rowColor;
@@ -153,8 +152,7 @@
         }     
     }
 
-    .tc-style_pager {
-        width: 100%;
+    .tc-style_pager {        
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
 
@@ -166,7 +164,9 @@
         }
 
         .tc-style_page-nav {    
-            float: right;
+            
+            position: relative;
+            right: 5px;
             text-align: right;        
 
             .tc-style_page-display {
@@ -180,4 +180,34 @@
 .tcGrid__scope {
     .tc-grid { .tcStyle(); .tcDisplay(); }
     .tc-grid_bootstrap { .tcGrid_bootstrap(); .tcDisplay(); }
+
+    .tc-button {
+        padding: 3px 4px;
+        cursor: pointer;
+        display: inline-block;
+        border-radius: 3px;
+        border: 1px solid #ccc;
+        background-color: white;
+        box-shadow: none;
+        text-shadow: none;
+
+        &:hover {
+            border: 1px solid #aaa;
+            background-color: #f5f5f5;
+        }
+    }
+
+    .clearfix {
+        *zoom: 1;
+        &:before,
+        &:after {
+            display: table;
+            content: "";    
+            line-height: 0;
+        }
+        &:after {
+            clear: both;
+        }
+    }
+
 }    
