--- a/src/templates/tcGrid.html
+++ b/src/templates/tcGrid.html
@@ -15,7 +15,7 @@
         </div>       
         
         <div class="tc-style_pager" ng-show="%OPTIONS%.internal.showFooter && %OPTIONS%.internal.pageCount > 1">
-            <div class="tc-grid_item-total">
+            <div class="tc-style_item-total">
                 {{(%OPTIONS%.paging.currentPage - 1) * %OPTIONS%.paging.pageSize + 1}}
                 -
                 {{%OPTIONS%.paging.currentPage === %OPTIONS%.internal.pageCount ? %OPTIONS%.paging.totalItemCount : %OPTIONS%.paging.currentPage * %OPTIONS%.paging.pageSize}}
@@ -23,11 +23,11 @@
                 {{%OPTIONS%.paging.totalItemCount}}
             </div>
             <div class="tc-style_page-nav">
-                <span class="tc-page-display">{{%OPTIONS%.paging.currentPage}} / {{%OPTIONS%.internal.pageCount}}</span>
-                <button class="tc-button" ng-click="%OPTIONS%.internal.first()" ng-disabled="%OPTIONS%.paging.currentPage === 1"><i class="fa fa-fast-backward"></i></button>
-                <button class="tc-button" ng-click="%OPTIONS%.internal.prev()" ng-disabled="%OPTIONS%.paging.currentPage === 1"><i class="fa fa-play fa-rotate-180"></i></button>
-                <button class="tc-button" ng-click="%OPTIONS%.internal.next()" ng-disabled="%OPTIONS%.paging.currentPage === %OPTIONS%.internal.pageCount"><i class="fa fa-play "></i></button>
-                <button class="tc-button" ng-click="%OPTIONS%.internal.last()" ng-disabled="%OPTIONS%.paging.currentPage === %OPTIONS%.internal.pageCount"><i class="fa fa-fast-forward"></i></button>
+                <span class="tc-style_page-display">{{%OPTIONS%.paging.currentPage}} / {{%OPTIONS%.internal.pageCount}}</span>
+                <button class="tc-button" ng-click="%OPTIONS%.internal.first()" ng-disabled="%OPTIONS%.paging.currentPage === 1"><strong>|</strong>&#9668;</button>
+                <button class="tc-button" ng-click="%OPTIONS%.internal.prev()" ng-disabled="%OPTIONS%.paging.currentPage === 1">&#9668;</button>
+                <button class="tc-button" ng-click="%OPTIONS%.internal.next()" ng-disabled="%OPTIONS%.paging.currentPage === %OPTIONS%.internal.pageCount">&#9658;</button>
+                <button class="tc-button" ng-click="%OPTIONS%.internal.last()" ng-disabled="%OPTIONS%.paging.currentPage === %OPTIONS%.internal.pageCount">&#9658;<strong>|</strong></button>
             </div>
             <div class="clearfix"></div>
         </div>
