Make tc-grid responsive update demo

--- a/demo/style.css
+++ b/demo/style.css
@@ -1,3 +1,11 @@
+html, body {
+    font-family: 'Arimo', sans-serif;
+}
+
+/*body {*/
+    /*overflow: hidden;*/
+/*}*/
+
 .tc-alert {
 	border-left: 1px solid #ddd;
 }
