Add pointer cursor on sortable headers remove commented out styles from demo

--- a/src/less/tcGrid.less
+++ b/src/less/tcGrid.less
@@ -122,6 +122,10 @@
         font-weight: bold;
         vertical-align: bottom;
 
+        &[ng-click] {
+          cursor: pointer;
+        }
+
         border-top: @border;
         border-left: @border;
         border-bottom: @headerRowBorder;
