Fixed LESS mixin DOM refs for column widths

--- a/src/less/tcGrid.less
+++ b/src/less/tcGrid.less
@@ -1,9 +1,9 @@
 ﻿.tcGridColumnWidth(@name, @width){
-  [tc-col-field="@{name}"]{ width:@width; }
+  [tc-field="@{name}"]{ width:@width; }
 }
 
 .tcGridColumnIndexWidth(@index, @width){
-  [tc-col-index="@{index}"]{ width:@width; }
+  [tc-index="@{index}"]{ width:@width; }
 }
 
 .tcGrid_bootstrap(
