Fixed issue when class and ng-class are siblings

--- a/src/templates/tcGrid.html
+++ b/src/templates/tcGrid.html
@@ -7,7 +7,7 @@
                 </div>
             </div>
             <div class="tc-display_tbody tc-style_tbody">
-                <div class="tc-display_tr" ng-class="%ROWCLASS%" id="tc-row-container" ng-repeat="row in %DATA% %FILTER%" %ROWCLICK%>
+                <div class="tc-display_tr %ROWCLASS%" ng-class="%ROWEXPRESSION%" id="tc-row-container" ng-repeat="row in %DATA% %FILTER%" %ROWCLICK%>
                     %CHILDREN%
                 </div>
             </div>
