--- a/src/templates/tcGrid.html
+++ b/src/templates/tcGrid.html
@@ -7,29 +7,28 @@
                 </div>
             </div>
             <div class="tc-display_tbody tc-style_tbody">
-                <div class="tc-display_tr %ROWCLASS%" ng-class="%ROWEXPRESSION%" id="tc-row-container" ng-repeat="row in data %FILTER%" %ROWCLICK%>
+                <div class="tc-display_tr %ROWCLASS%" ng-class="%ROWEXPRESSION%" id="tc-row-container" ng-repeat="row in tcGrid.data %FILTER%" %ROWCLICK%>
                     %CHILDREN%
                 </div>
             </div>
            
         </div>       
         
-        <div class="tc-style_pager" ng-show="vm.showFooter && vm.pageCount > 1">
+        <div class="tc-style_pager" ng-show="tcGrid.showFooter && tcGrid.pageCount > 1">
             <div class="tc-style_item-total">
-                {{(options.paging.currentPage - 1) * options.paging.pageSize + 1}}
+                {{(tcGrid.options.paging.currentPage - 1) * tcGrid.options.paging.pageSize + 1}}
                 -
-                {{options.paging.currentPage === vm.pageCount ? options.paging.totalItemCount : options.paging.currentPage * options.paging.pageSize}}
+                {{tcGrid.options.paging.currentPage === tcGrid.pageCount ? tcGrid.options.paging.totalItemCount : tcGrid.options.paging.currentPage * tcGrid.options.paging.pageSize}}
                 of
-                {{options.paging.totalItemCount}}
+                {{tcGrid.options.paging.totalItemCount}}
             </div>
             <div class="tc-style_page-nav">
-                <span class="tc-style_page-display">{{options.paging.currentPage}} / {{vm.pageCount}}</span>
-                <select ng-if="options.paging.pageSizeOptions.length"
-                        ng-options="pageSize for pageSize in options.paging.pageSizeOptions" ng-model="options.paging.pageSize" ng-change="vm.updatePageSize()"></select>
-                <button class="tc-button" ng-click="vm.first()" ng-disabled="options.paging.currentPage === 1"><strong>|</strong>&#9668;</button>
-                <button class="tc-button" ng-click="vm.prev()" ng-disabled="options.paging.currentPage === 1">&#9668;</button>
-                <button class="tc-button" ng-click="vm.next()" ng-disabled="options.paging.currentPage === vm.pageCount">&#9658;</button>
-                <button class="tc-button" ng-click="vm.last()" ng-disabled="options.paging.currentPage === vm.pageCount">&#9658;<strong>|</strong></button>
+                <span class="tc-style_page-display">{{tcGrid.options.paging.currentPage}} / {{tcGrid.pageCount}}</span>
+                <select ng-if="tcGrid.options.paging.pageSizetcGrid.options.length" ng-tcGrid.options="pageSize for pageSize in tcGrid.options.paging.pageSizetcGrid.options" ng-model="tcGrid.options.paging.pageSize" ng-change="tcGrid.updatePageSize()"></select>
+                <button class="tc-button" ng-click="tcGrid.first()" ng-disabled="tcGrid.options.paging.currentPage === 1"><strong>|</strong>&#9668;</button>
+                <button class="tc-button" ng-click="tcGrid.prev()" ng-disabled="tcGrid.options.paging.currentPage === 1">&#9668;</button>
+                <button class="tc-button" ng-click="tcGrid.next()" ng-disabled="tcGrid.options.paging.currentPage === tcGrid.pageCount">&#9658;</button>
+                <button class="tc-button" ng-click="tcGrid.last()" ng-disabled="tcGrid.options.paging.currentPage === tcGrid.pageCount">&#9658;<strong>|</strong></button>
             </div>
             <div class="clearfix"></div>
         </div>        
