--- a/src/templates/tcGrid.html
+++ b/src/templates/tcGrid.html
@@ -14,15 +14,15 @@
            
         </div>       
         
-        <div class="tc-style_pager" ng-show="tcGrid.showFooter && tcGrid.pageCount > 1">
-            <div class="tc-style_item-total">
+        <div class="tc-display_pager" ng-show="tcGrid.showFooter && tcGrid.pageCount > 1">
+            <div class="tc-display_item-total">
                 {{(tcGrid.options.paging.currentPage - 1) * tcGrid.options.paging.pageSize + 1}}
                 -
                 {{tcGrid.options.paging.currentPage === tcGrid.pageCount ? tcGrid.options.paging.totalItemCount : tcGrid.options.paging.currentPage * tcGrid.options.paging.pageSize}}
                 of
                 {{tcGrid.options.paging.totalItemCount}}
             </div>
-            <div class="tc-style_page-nav">
+            <div class="tc-display_page-nav">
                 <span class="tc-style_page-display">{{tcGrid.options.paging.currentPage}} / {{tcGrid.pageCount}}</span>
                 <select ng-if="tcGrid.options.paging.pageSizeOptions.length" ng-options="pageSize for pageSize in tcGrid.options.paging.pageSizeOptions" ng-model="tcGrid.options.paging.pageSize" ng-change="tcGrid.updatePageSize()"></select>
                 <button class="tc-button" ng-click="tcGrid.first()" ng-disabled="tcGrid.options.paging.currentPage === 1"><strong>|</strong>&#9668;</button>
