sometimes white is not the new blank

--- a/src/less/tcGrid.less
+++ b/src/less/tcGrid.less
@@ -31,11 +31,11 @@
 .tcGrid_blank(
   @border:0,
   @pagerMarginTop: 10px,
-  @pagerColor: #FFF,
-  @headerColor: #FFF,
-  @rowColor: #FFF,
-  @rowColorAlternating: #FFF,
-  @rowColorHover: #FFF,
+  @pagerColor: inherit,
+  @headerColor: inherit,
+  @rowColor: inherit,
+  @rowColorAlternating: inherit,
+  @rowColorHover: inherit,
   @rowBorder: 0,
   @headerRowBorder: 0,
   @cellPadding:0
