--- a/src/sass/tcGrid.scss
+++ b/src/sass/tcGrid.scss
@@ -30,9 +30,50 @@
   @include tcDisplay();
 }
 
-@mixin tcDisplay() {
+@mixin tcDisplay(
+  $mobileBreakpoint: 768px
+) {
 
-  @media screen and (min-width: 769px) {
+  .tc-display_pager {
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+
+    .tc-display_item-total {
+      float:left;
+    }
+
+    .tc-display_page-nav {
+      position: relative;
+      right: 5px;
+      text-align: right;
+    }
+  }
+
+  .tc-display_table{
+    display: block;
+
+    .tc-display_thead {
+      display: none;
+    }
+
+    .tc-display_tbody {
+      display: block;
+
+      .tc-display_tr{
+        display: block;
+
+        .tc-mobile-header {
+          display: inline-block;
+        }
+
+        .tc-display_td {
+          display: block;
+        }
+      }
+    }
+  }
+
+  @media screen and (min-width: $mobileBreakpoint) {
     .tc-display_table{
       display: table;
       width: 100%;
@@ -66,32 +107,6 @@
       }
     }
   }
-
-  @media screen and (max-width: 768px) {
-    .tc-display_table{
-      display: block;
-
-      .tc-display_thead {
-        display: none;
-      }
-
-      .tc-display_tbody {
-        display: block;
-
-        .tc-display_tr{
-          display: block;
-
-          .tc-mobile-header {
-            display: inline-block;
-          }
-
-          .tc-display_td {
-            display: block;
-          }
-        }
-      }
-    }
-  }
 }
 
 
@@ -105,7 +120,8 @@
   $rowColorHover:#f0f0f0,
   $rowBorder: none,
   $headerRowBorder:1px solid #ddd,
-  $fontSize:inherit
+  $fontSize:inherit,
+  $mobileBreakpoint: 768px
 ){
   font-size: $fontSize;
 
@@ -153,6 +169,9 @@
 
     .tc-display_tbody {
       .tc-style_tr{
+        color: inherit;
+        text-decoration: none;
+
         &:nth-child(odd) {
           background-color: $rowColor;
         }
@@ -167,6 +186,9 @@
       }
       .tc-display_tr {
 
+        &:first-child {
+          border-top: $border;
+        }
 
         .tc-mobile-header {
           padding-right: 5px;
@@ -177,29 +199,20 @@
         .tc-style_td {
           border-left: $border;
           border-top: $rowBorder;
+          border-right: $border;
           padding: $cellPadding;
 
-          @media screen and (min-width: 769px) {
+          @media screen and (min-width: $mobileBreakpoint) {
             &:last-child {
               border-right: $border;
             }
           }
-
-          @media screen and (max-width: 768px) {
-            border-right: $border;
-          }
         }
 
 
-        @media screen and (min-width: 769px) {
+        @media screen and (min-width: $mobileBreakpoint) {
           &:first-child {
             border-top: none;
-          }
-        }
-
-        @media screen and (max-width: 768px) {
-          &:first-child {
-            border-top: $border;
           }
         }
       }
