--- a/src/templates/tcGrid.html
+++ b/src/templates/tcGrid.html
@@ -7,9 +7,9 @@
                 </div>
             </div>
             <div class="tc-display_tbody tc-style_tbody">
-                <div class="tc-display_tr %ROWCLASS%" ng-class="%ROWEXPRESSION%" id="tc-row-container" ng-repeat="row in tcGrid.data %FILTER%" %ROWCLICK%>
+                <a class="tc-display_tr %ROWCLASS%" ng-class="%ROWEXPRESSION%" id="tc-row-container" ng-repeat="row in tcGrid.data %FILTER%" %ROWCLICK% %ROWLINK%>
                     %CHILDREN%
-                </div>
+                </a>
             </div>
 
         </div>
