--- a/demo/style.css
+++ b/demo/style.css
@@ -1,11 +1,53 @@
 html, body {
-    font-family: 'Arimo', sans-serif;
+    background: #F2F2F2;
+    font-size: 16px;
+    line-height: 1.8;
+    font-family: sans-serif;
+    margin: 0;
 }
 
-.tc-alert {
-	border-left: 1px solid #ddd;
+.container {
+    margin-top: 2rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
 }
 
-.hide-column {
-    display: none !important;
+.hero {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    margin-left: auto;
+    margin-right: auto;
+    background: #0ec0e6;
+    box-shadow: 0 2px 2px rgba(0,0,0,0.24), 0 0 2px 0 rgba(0,0,0,0.12);
 }
+
+.hero__title {
+    font-size: 3rem;
+    letter-spacing: 0.1em;
+    color: white;
+    text-align: center;
+    font-weight: normal;
+}
+
+.test-button {
+    background: white;
+    border-radius: 2px;
+    border: 1px solid rgba(156, 163, 178, 0.5);
+    padding: 8px 12px;
+    min-width: 36px;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+
+}
+
+.test-button:hover {
+    cursor: pointer;
+}
+
+@media screen and (min-width: 960px) {
+    .container {
+        margin-left: 3rem;
+        margin-right: 3rem;
+    }
+}
+
