fix problem with transclusion in angular 1.5 update version to 0.8.0

--- a/src/templates/tcGrid.html
+++ b/src/templates/tcGrid.html
@@ -2,14 +2,10 @@
     <div class="%GRIDCLASS%">
         <div class="tc-display_table tc-style_table">
             <div class="tc-display_thead tc-style_thead">
-                <div class="tc-display_tr tc-style_tr">
-                    %HEADER%
-                </div>
+                <div class="tc-display_tr tc-style_tr"></div>
             </div>
             <div class="tc-display_tbody tc-style_tbody">
-                <a class="tc-display_tr %ROWCLASS%" ng-class="%ROWEXPRESSION%" id="tc-row-container" ng-repeat="row in tcGrid.data %FILTER%" %ROWCLICK% %ROWLINK%>
-                    %CHILDREN%
-                </a>
+                <a class="tc-display_tr %ROWCLASS%" ng-class="%ROWEXPRESSION%" id="tc-row-container" ng-repeat="row in tcGrid.data %FILTER%" %ROWCLICK% %ROWLINK%></a>
             </div>
 
         </div>
