--- a/demo/grid.css
+++ b/demo/grid.css
@@ -67,8 +67,30 @@
 
 .grid .tc-style_sort.desc:after {
     content: '\25BC';
+    float: right;
 }
 
 .grid .tc-style_sort.asc:after {
     content: '\25B2';
+    float: right;
+}
+
+.grid [tc-col-index="1"] {
+    width: 5%;
+}
+
+.grid [tc-col-index="2"] {
+    width: 25%;
+}
+
+.grid [tc-col-index="3"] {
+    width: 30%;
+}
+
+.grid [tc-col-index="4"] {
+    width: 15%;
+}
+
+.grid [tc-col-index="5"] {
+    width: 15%;
 }
