--- a/demo/style.css
+++ b/demo/style.css
@@ -93,22 +93,23 @@ p {
 @media screen and (min-width: 768px) {
     .section__grid {
         display: inline-block;
-        width: calc(60% - 1.5em);
+        width: calc(80% - 1.5em);
         padding-left: 0.5em;
         padding-right: 0.5em;
     }
 
     .section__description {
         display: inline-block;
-        width: calc(40% - 2em);
+        width: calc(20% - 2em);
         padding: 0.5em 1em;
     }
 }
 
 @media screen and (min-width: 960px) {
     .container {
-        margin-left: 3rem;
-        margin-right: 3rem;
+        margin-left: 24rem;
+        margin-right: 24rem;
+        margin-bottom: 4rem;
     }
 }
 
